removed accordion scripts and fixed margin overflow in opera

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -984,7 +984,7 @@ input#ticket_date_select {
 }
 #footer_links ul {
   float: left;
-  margin: 0px 54px 0px 0px;
+  margin: 0px 50px 0px 0px;
 }
 #footer_links li {
   list-style: disc;
